2019-11-12  Ilya Leoshkevich  <iii@linux.ibm.com>

	PR rtl-optimization/92430
	* gcc.dg/pr92430.c: New test (from Arseny Solokha).

2019-11-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92461
	* gcc.dg/torture/pr92461.c: New testcase.

2019-11-12  Martin Liska  <mliska@suse.cz>

	* gcc.dg/completion-3.c: Append = to all expected
	results and sort expected output.
	* gcc.dg/pr83620.c: Update error message.
	* gcc.dg/spellcheck-params-2.c: Likewise.
	* gcc.dg/spellcheck-params.c: Likewise.
	* gcc.misc-tests/help.exp: Update expected output.

2019-11-12  Maciej W. Rozycki  <macro@codesourcery.com>
	    Tobias Burnus  <tobias@codesourcery.com>
	    Frederik Harwath  <frederik@codesourcery.com>
	    Thomas Schwinge  <thomas@codesourcery.com>

	gcc/testsuite/
	* c-c++-common/goacc/parallel-dims.c: New test.
	* gfortran.dg/goacc/parallel-dims.f90: New test.

2019-11-12  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/92452
	* c-c++-common/pr92452.c: New test.

2019-11-12  Andre Vieira  <andre.simoesdiasvieira@arm.com>

	* gcc.dg/vect/pr92347.c: New test.

2019-11-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92447
	* g++.dg/cpp0x/pr92447.C: New test.

	* c-c++-common/gomp/declare-target-5.c: New test.

2019-11-11  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.dg/vect/pr92420.c: New test.

2019-11-11  Claudiu Zissulescu <claziss@gmail.com>

	* gcc.target/arc/delay-slot-limm.c: New test.

2019-11-11  Claudiu Zissulescu <claziss@gmail.com>

	* gcc.target/arc/pic-2.c: New file.

2019-11-11  Tobias Burnus  <tobias@codesourcery.com>
	    Mark Eggleston  <mark.eggleston@codethink.com>

	PR fortran/92142
	* gcc/testsuite/gfortran.dg/ISO_Fortran_binding_16.f90:
	Correct dg-additional-sources.

2019-11-11  Andre Vieira  <andre.simoesdiasvieira@arm.com>

	* gcc.dg/vect/vect-reduc-epilogue-gaps.c: New test.

2019-11-11  José Rui Faustino de Sousa  <jrfsousa@gmail.com>

	PR fortran/92142
	* gcc/testsuite/gfortran.dg/ISO_Fortran_binding_16.c: New.